; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_logging.c_mmalomx_param_to_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_logging.c_mmalomx_param_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i8*, i64 }

@mmalomx_param_to_string.param_to_names = internal constant [38 x %struct.anon] [%struct.anon { i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i32 0, i32 0), i64 139 }, %struct.anon { i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i32 0, i32 0), i64 152 }, %struct.anon { i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i32 0, i32 0), i64 145 }, %struct.anon { i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i32 0, i32 0), i64 134 }, %struct.anon { i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i32 0, i32 0), i64 142 }, %struct.anon { i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.5, i32 0, i32 0), i64 140 }, %struct.anon { i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.6, i32 0, i32 0), i64 147 }, %struct.anon { i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.7, i32 0, i32 0), i64 149 }, %struct.anon { i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.8, i32 0, i32 0), i64 131 }, %struct.anon { i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.9, i32 0, i32 0), i64 144 }, %struct.anon { i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i32 0, i32 0), i64 141 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.11, i32 0, i32 0), i64 150 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.12, i32 0, i32 0), i64 153 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.13, i32 0, i32 0), i64 151 }, %struct.anon { i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.14, i32 0, i32 0), i64 133 }, %struct.anon { i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.15, i32 0, i32 0), i64 132 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.16, i32 0, i32 0), i64 128 }, %struct.anon { i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.17, i32 0, i32 0), i64 129 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.18, i32 0, i32 0), i64 137 }, %struct.anon { i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.19, i32 0, i32 0), i64 135 }, %struct.anon { i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.20, i32 0, i32 0), i64 138 }, %struct.anon { i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.21, i32 0, i32 0), i64 146 }, %struct.anon { i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.22, i32 0, i32 0), i64 148 }, %struct.anon { i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.23, i32 0, i32 0), i64 155 }, %struct.anon { i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.24, i32 0, i32 0), i64 162 }, %struct.anon { i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.25, i32 0, i32 0), i64 161 }, %struct.anon { i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.26, i32 0, i32 0), i64 163 }, %struct.anon { i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.27, i32 0, i32 0), i64 164 }, %struct.anon { i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.28, i32 0, i32 0), i64 157 }, %struct.anon { i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.29, i32 0, i32 0), i64 159 }, %struct.anon { i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.30, i32 0, i32 0), i64 156 }, %struct.anon { i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.31, i32 0, i32 0), i64 160 }, %struct.anon { i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.32, i32 0, i32 0), i64 158 }, %struct.anon { i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.33, i32 0, i32 0), i64 143 }, %struct.anon { i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.34, i32 0, i32 0), i64 154 }, %struct.anon { i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.35, i32 0, i32 0), i64 136 }, %struct.anon { i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.36, i32 0, i32 0), i64 130 }, %struct.anon { i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.37, i32 0, i32 0), i64 0 }], align 16
@.str = private unnamed_addr constant [27 x i8] c"OMX_IndexParamPriorityMgmt\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"OMX_IndexParamAudioInit\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"OMX_IndexParamImageInit\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"OMX_IndexParamVideoInit\00", align 1
@.str.4 = private unnamed_addr constant [24 x i8] c"OMX_IndexParamOtherInit\00", align 1
@.str.5 = private unnamed_addr constant [29 x i8] c"OMX_IndexParamPortDefinition\00", align 1
@.str.6 = private unnamed_addr constant [33 x i8] c"OMX_IndexParamCompBufferSupplier\00", align 1
@.str.7 = private unnamed_addr constant [30 x i8] c"OMX_IndexParamAudioPortFormat\00", align 1
@.str.8 = private unnamed_addr constant [30 x i8] c"OMX_IndexParamVideoPortFormat\00", align 1
@.str.9 = private unnamed_addr constant [30 x i8] c"OMX_IndexParamImagePortFormat\00", align 1
@.str.10 = private unnamed_addr constant [30 x i8] c"OMX_IndexParamOtherPortFormat\00", align 1
@.str.11 = private unnamed_addr constant [23 x i8] c"OMX_IndexParamAudioPcm\00", align 1
@.str.12 = private unnamed_addr constant [23 x i8] c"OMX_IndexParamAudioAac\00", align 1
@.str.13 = private unnamed_addr constant [23 x i8] c"OMX_IndexParamAudioMp3\00", align 1
@.str.14 = private unnamed_addr constant [25 x i8] c"OMX_IndexParamVideoMpeg2\00", align 1
@.str.15 = private unnamed_addr constant [25 x i8] c"OMX_IndexParamVideoMpeg4\00", align 1
@.str.16 = private unnamed_addr constant [23 x i8] c"OMX_IndexParamVideoWmv\00", align 1
@.str.17 = private unnamed_addr constant [22 x i8] c"OMX_IndexParamVideoRv\00", align 1
@.str.18 = private unnamed_addr constant [23 x i8] c"OMX_IndexParamVideoAvc\00", align 1
@.str.19 = private unnamed_addr constant [24 x i8] c"OMX_IndexParamVideoH263\00", align 1
@.str.20 = private unnamed_addr constant [36 x i8] c"OMX_IndexParamStandardComponentRole\00", align 1
@.str.21 = private unnamed_addr constant [25 x i8] c"OMX_IndexParamContentURI\00", align 1
@.str.22 = private unnamed_addr constant [31 x i8] c"OMX_IndexParamCommonSensorMode\00", align 1
@.str.23 = private unnamed_addr constant [34 x i8] c"OMX_IndexConfigCommonWhiteBalance\00", align 1
@.str.24 = private unnamed_addr constant [33 x i8] c"OMX_IndexConfigCommonDigitalZoom\00", align 1
@.str.25 = private unnamed_addr constant [35 x i8] c"OMX_IndexConfigCommonExposureValue\00", align 1
@.str.26 = private unnamed_addr constant [25 x i8] c"OMX_IndexConfigCapturing\00", align 1
@.str.27 = private unnamed_addr constant [31 x i8] c"OMX_IndexAutoPauseAfterCapture\00", align 1
@.str.28 = private unnamed_addr constant [28 x i8] c"OMX_IndexConfigCommonRotate\00", align 1
@.str.29 = private unnamed_addr constant [28 x i8] c"OMX_IndexConfigCommonMirror\00", align 1
@.str.30 = private unnamed_addr constant [27 x i8] c"OMX_IndexConfigCommonScale\00", align 1
@.str.31 = private unnamed_addr constant [31 x i8] c"OMX_IndexConfigCommonInputCrop\00", align 1
@.str.32 = private unnamed_addr constant [32 x i8] c"OMX_IndexConfigCommonOutputCrop\00", align 1
@.str.33 = private unnamed_addr constant [34 x i8] c"OMX_IndexParamNumAvailableStreams\00", align 1
@.str.34 = private unnamed_addr constant [27 x i8] c"OMX_IndexParamActiveStream\00", align 1
@.str.35 = private unnamed_addr constant [27 x i8] c"OMX_IndexParamVideoBitrate\00", align 1
@.str.36 = private unnamed_addr constant [46 x i8] c"OMX_IndexParamVideoProfileLevelQuerySupported\00", align 1
@.str.37 = private unnamed_addr constant [23 x i8] c"OMX_IndexParam unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mmalomx_param_to_string(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i8* @mmalomx_parameter_name_omx(i32 %7)
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i8*, i8** %4, align 8
  store i8* %12, i8** %2, align 8
  br label %41

13:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  br label %14

14:                                               ; preds = %32, %13
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds [38 x %struct.anon], [38 x %struct.anon]* @mmalomx_param_to_string.param_to_names, i64 0, i64 %16
  %18 = getelementptr inbounds %struct.anon, %struct.anon* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %14
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds [38 x %struct.anon], [38 x %struct.anon]* @mmalomx_param_to_string.param_to_names, i64 0, i64 %23
  %25 = getelementptr inbounds %struct.anon, %struct.anon* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %3, align 8
  %28 = icmp ne i64 %26, %27
  br label %29

29:                                               ; preds = %21, %14
  %30 = phi i1 [ false, %14 ], [ %28, %21 ]
  br i1 %30, label %31, label %35

31:                                               ; preds = %29
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %5, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %5, align 4
  br label %14

35:                                               ; preds = %29
  %36 = load i32, i32* %5, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds [38 x %struct.anon], [38 x %struct.anon]* @mmalomx_param_to_string.param_to_names, i64 0, i64 %37
  %39 = getelementptr inbounds %struct.anon, %struct.anon* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 16
  store i8* %40, i8** %2, align 8
  br label %41

41:                                               ; preds = %35, %11
  %42 = load i8*, i8** %2, align 8
  ret i8* %42
}

declare dso_local i8* @mmalomx_parameter_name_omx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
